feat: конфигурация swagger для фичи tasks
